<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context="com.example.android.cricketscore.MainActivity">

    <TextView
        android:id="@+id/textScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_score"
        android:layout_marginTop="10dp"
        android:textSize="45sp"
        android:gravity="center_horizontal"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textOvers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sample_over"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/textExtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sample_extra"
            android:layout_weight="1"
            android:textAlignment="textEnd"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:textSize="21sp"
            android:text="@string/sample_balls"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_dec"
            android:onClick="decreaseBall"/>

        <TextView
            android:id="@+id/textBalls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sample_ball"
            android:textSize="25sp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_inc"
            android:onClick="increaseBall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_no_ball"
            android:onClick="addNoBall"/>
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            android:onClick="addWideBall"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_runs_title"
            android:textSize="25sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_margin="2dp"
                android:background="#1a8635"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_button_one"
                android:onClick="add1Run"/>
            <Button
                android:layout_margin="2dp"
                android:background="#1a8635"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_button_2"
                android:onClick="add2Run"/>
            <Button
                android:layout_margin="2dp"
                android:background="#1a8635"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_button_three"
                android:onClick="add3Run"/>
            <Button
                android:layout_margin="2dp"
                android:background="#1a8635"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_button_four"
                android:onClick="add4Run"
                />
            <Button
                android:layout_margin="2dp"
                android:background="#1a8635"
                android:textColor="#FFFFFF"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_button_six"
                android:onClick="add6Run"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:textSize="21sp"
                android:text="@string/sample_wicket_title"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_dec"
                android:onClick="decreaseWicket"/>

            <TextView
                android:id="@+id/textWickets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/wicket_title"
                android:textSize="25sp" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_inc"
                android:onClick="increaseWicket"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:background="#FF0000"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/button_reset"
        android:onClick="resetScore"/>

</LinearLayout>
